--- a/_wp-core.scss
+++ b/_wp-core.scss
@@ -129,6 +129,26 @@ $hr-separator-spacing-y: 2rem !default;
             }
         }
 
+        .wp-block-group {
+            &__inner-container {
+                max-width: rfs-value(vars.$post-content-max-width);
+                padding-right: calc(#{$container-padding-x} * .5);
+                padding-left: calc(#{$container-padding-x} * .5);
+
+                @if vars.$wp-block-group-items-default-gap {
+                    > * {
+                        @include margin-bottom($wp-block-group-items-default-gap);
+                    }
+                }
+            }
+        }
+
+        .wp-block-buttons {
+            @if vars.$wp-block-buttons-gap {
+                @include margin-bottom($wp-block-buttons-gap);
+            }
+        }
+
         .wp-block-image {
             figcaption {
                 //caption-side: bottom;
