--- a/_wp-core.scss
+++ b/_wp-core.scss
@@ -129,16 +129,23 @@ $hr-separator-spacing-y: 2rem !default;
             }
         }
 
+        // Groups:
         .wp-block-group {
             &__inner-container {
                 max-width: rfs-value(vars.$post-content-max-width);
+                margin: 0 auto;
                 padding-right: calc(#{$container-padding-x} * .5);
                 padding-left: calc(#{$container-padding-x} * .5);
+                @include clearfix();
 
                 @if vars.$wp-block-group-items-default-gap {
                     > * {
                         @include margin-bottom($wp-block-group-items-default-gap);
                     }
+                }
+
+                > *:last-child {
+                    margin-bottom: 0;
                 }
             }
         }
@@ -250,6 +257,20 @@ $hr-separator-spacing-y: 2rem !default;
                 }
             }
 
+        }
+    }
+}
+
+@mixin wp-color-pallete($colors){
+    // Color pallete
+    @each $name, $color in $colors {
+
+        .has-#{$name}-color {
+            color: $color;
+        }
+
+        .has-#{$name}-background-color {
+            background-color: $color;
         }
     }
 }
