--- a/_mixins.scss
+++ b/_mixins.scss
@@ -545,3 +545,7 @@ $all-text-inputs-invalid: _assign-inputs($_text-inputs-list, invalid);
         @content;
     }
 }
+
+@function sub-map-get($map, $key1, $key2) {
+    @return map-get(map-get($map, $key1), $key2);
+}
