--- a/_mixins.scss
+++ b/_mixins.scss
@@ -139,6 +139,44 @@ $all-text-inputs-invalid: _assign-inputs($_text-inputs-list, invalid);
 // Usage: #{$all-text-inputs-active} { styles }
 //^^^
 
+@mixin generate-properties($properties) {
+    @each $property, $property-value in $properties {
+        @if $property-value {
+            @if $property == 'typography' {
+                @extend %typography-#{$property-value};
+                //@at-root {
+                //@extend %typography-#{$property-value}
+                //}
+            } @else if $property == 'font-size' or $property == 'line-height' {
+                #{$property}: rfs-value($property-value);
+            } @else if ($property == 'padding') {
+                @include padding($property-value);
+            } @else if ($property == 'padding-right') {
+                @include padding-right($property-value);
+            } @else if ($property == 'padding-left') {
+                @include padding-left($property-value);
+            } @else if ($property == 'padding-top') {
+                @include padding-top($property-value);
+            } @else if ($property == 'padding-bottom') {
+                @include padding-bottom($property-value);
+            } @else if ($property == 'margin') {
+                @include margin($property-value);
+            } @else if ($property == 'margin-right') {
+                @include margin-right($property-value);
+            } @else if ($property == 'margin-left') {
+                @include margin-left($property-value);
+            } @else if ($property == 'margin-top') {
+                @include margin-top($property-value);
+            } @else if ($property == 'margin-bottom') {
+                @include margin-bottom($property-value);
+            } @else if ($property == 'border-radius') {
+                @include border-radius($property-value);
+            } @else {
+                #{$property}: $property-value;
+            }
+        }
+    }
+}
 
 //********** Truncates text and adds an ellipsis to represent overflow.
 
