--- a/_wrappers.scss
+++ b/_wrappers.scss
@@ -21,20 +21,6 @@
     }
 }
 
-// ------------ Container that wider than normal .container ------------
-.container-wider {
-    padding-right: calc(#{$container-padding-x} * .5);
-    padding-left: calc(#{$container-padding-x} * .5);
-    margin-right: auto;
-    margin-left: auto;
-    width: rfs-value(vars.$container-wider-max-width);
-    max-width: rfs-value(vars.$container-wider-max-width);
-
-    @include mx.breakpoint-max( calc( rfs-value(vars.$container-wider-max-width) + rfs-value(vars.$post-content-spacing-x * 2) ) ) {
-        width: 100%;
-    }
-}
-
 // ------------ Template with sidebar styles ------------
 .container-with-sidebar {
     display: flex;
@@ -48,11 +34,13 @@
     width: rfs-value(vars.$container-with-sidebar-max-width);
     max-width: rfs-value(vars.$container-with-sidebar-max-width);
 
-    @include mx.breakpoint-max( calc( rfs-value(vars.$container-with-sidebar-max-width) + rfs-value(vars.$post-content-spacing-x * 2) ) ) {
+    @include mx.breakpoint-max(calc(rfs-value(vars.$container-with-sidebar-max-width) + rfs-value(vars.$post-content-spacing-x * 2))) {
         width: 100%;
     }
 
     .sidebar {
+        flex-shrink: 0;
+        flex-basis: rfs-value(vars.$sidebar-content-width);
         width: rfs-value(vars.$sidebar-content-width);
         max-width: rfs-value(vars.$sidebar-content-width);
     }
@@ -76,8 +64,26 @@
     //max-width: 100vw;
     max-width: rfs-value(vars.$post-content-max-width);
 
-    @include mx.breakpoint-max( calc( rfs-value(vars.$post-content-max-width) + rfs-value(vars.$post-content-spacing-x * 2) ) ) {
+    @include mx.breakpoint-max(calc(rfs-value(vars.$post-content-max-width) + rfs-value(vars.$post-content-spacing-x * 2))) {
         width: 100%;
+    }
+
+    &.content-width-wider {
+        width: rfs-value(vars.$container-wider-max-width);
+        max-width: rfs-value(vars.$container-wider-max-width);
+
+        @include mx.breakpoint-max(calc(rfs-value(vars.$container-wider-max-width) + rfs-value(vars.$post-content-spacing-x * 2))) {
+            width: 100%;
+        }
+    }
+
+    &.content-width-narrow {
+        width: rfs-value(vars.$container-narrow-max-width);
+        max-width: rfs-value(vars.$container-narrow-max-width);
+
+        @include mx.breakpoint-max(calc(rfs-value(vars.$container-narrow-max-width) + rfs-value(vars.$post-content-spacing-x * 2))) {
+            width: 100%;
+        }
     }
 }
 
