--- a/_mixins.scss
+++ b/_mixins.scss
@@ -1,5 +1,7 @@
 @charset "UTF-8";
 
+@use "sass:math";
+
 @import "bootstrap-required";
 
 //********** hidden text
@@ -32,12 +34,44 @@
 
 //********** Define default font size.
 
-//@function calculateRem($size) {
-//    $remSize: calc($size / 16px);
-//    @return $remSize * 1rem;
-//}
+@function calculateRem($value) {
+    // Check if the value contains "px" as a unit
+    @if unit($value) == 'px' {
+        $rem: strip-unit(math.div($value, 16)); // Convert pixels to rems
+        @return $rem + rem; // Convert pixels to rems
+    }
+    @else {
+        @return $value; // Skip conversion if the value doesn't contain "px"
+    }
+}
+
+@function strip-unit($number) {
+    @if type-of($number) == 'number' and not unitless($number) {
+        @return math.div($number, $number * 0 + 1);
+    }
+
+    @return $number;
+}
 
 @mixin font($size, $line-height: false, $weight: false, $style: false, $font-family: false) {
+    @if $size{
+        font-size: calculateRem($size);
+    }
+    @if $line-height{
+        line-height: calculateRem($line-height);
+    }
+    @if $weight{
+        font-weight: $weight;
+    }
+    @if $style{
+        font-style: $style;
+    }
+    @if $font-family{
+        font-family: $font-family;
+    }
+}
+
+@mixin font-rfs($size, $line-height: false, $weight: false, $style: false, $font-family: false) {
     @if $size{
         @include font-size($size);
     }
